--- a/styles/globals.css
+++ b/styles/globals.css
@@ -70,3 +70,10 @@ a {
 .vertical {
     flex-direction: vertical;
 }
+
+.flex-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
